--- a/popup.html
+++ b/popup.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attention Tracker</title>
     <style>
-        /* Body styling */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #e9f8fa; /* Light gray background */
+            background-color: #e9f8fa;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
             width: 350px;
-            color: #333; /* Darker text for better contrast */
+            color: #333;
         }
 
         h2 {
             text-align: center;
-            color: #2196F3; /* Accent blue for the heading */
+            color: #2196F3;
             margin-bottom: 20px;
             font-size: 24px;
             font-weight: 600;
@@ -30,7 +29,6 @@
             margin: 0;
         }
 
-        /* Individual tab item styling */
         .tab-item {
             margin: 10px 0;
             padding: 15px;
@@ -42,30 +40,17 @@
             transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
 
-        /* Alternate row colors */
-        .odd {
-            background-color: #b3eed6; /* Light gray for odd rows */
-        }
+        .odd { background-color: #b3eed6; }
+        .even { background-color: #cdc6ca; }
 
-        .even {
-            background-color: #cdc6ca; /* Slightly darker gray for even rows */
-        }
-
-        /* Hover effect */
         .tab-item:hover {
             background-color: #f1f1f1;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
-        /* Tab name styling */
-        .tab-item strong {
-            font-size: 16px;
-            color: #333; /* Dark gray for tab names */
-        }
-
-        /* Time spent styling */
+        .tab-item strong { font-size: 16px; color: #333; }
         .time {
-            background-color: #2196F3; /* Accent blue for time */
+            background-color: #2196F3;
             color: #fff;
             padding: 6px 12px;
             border-radius: 4px;
@@ -73,27 +58,40 @@
             font-weight: 500;
         }
 
-        /* Empty state when no data */
         .empty {
             text-align: center;
             font-style: italic;
             color: #888;
         }
 
-        /* Smooth transition for content */
-        .tab-item, .empty {
-            transition: transform 0.3s ease;
+        .tab-item, .empty { transition: transform 0.3s ease; }
+        .tab-item:hover { transform: translateY(-3px); }
+
+        /* Download button */
+        .download-btn {
+            display: block;
+            width: 100%;
+            margin-top: 15px;
+            padding: 10px;
+            text-align: center;
+            background-color: #2196F3;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
         }
 
-        /* Add a slight transform on hover for tab items */
-        .tab-item:hover {
-            transform: translateY(-3px);
+        .download-btn:hover {
+            background-color: #1976D2;
         }
     </style>
 </head>
 <body>
     <h2>Tab Activity</h2>
     <ul id="tabList"></ul>
+    <button id="downloadCsv" class="download-btn">Download CSV</button>
     <script src="popup.js"></script>
 </body>
 </html>
