--- a/popup.html
+++ b/popup.html
@@ -104,14 +104,133 @@
         .button:hover {
             background-color: #1976D2;
         }
+
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 15px;
+            gap: 10px;
+        }
+
+        .toggle-label {
+            font-size: 14px;
+            color: #333;
+        }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 24px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 24px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
+        .dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+.dark-mode h2 {
+    color: #BB86FC;
+}
+
+.dark-mode .tab-item {
+    background-color: #333;
+    color: white;
+    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
+}
+
+.dark-mode .tab-item strong {
+    color: #ffffff;
+}
+
+.dark-mode .time {
+    background-color: #BB86FC;
+}
+
+.dark-mode .hide-btn {
+    background-color: #FF4444;
+    color: white;
+}
+
+.dark-mode .hide-btn:hover {
+    background-color: #D32F2F;
+}
+
+.dark-mode .button {
+    background-color: #BB86FC;
+    color: white;
+}
+
+.dark-mode .button:hover {
+    background-color: #9B59B6;
+}
+
+.dark-mode .toggle-label {
+    color: #ffffff;
+}
+
+.dark-mode .slider {
+    background-color: #666;
+}
+
+.dark-mode input:checked + .slider {
+    background-color: #BB86FC;
+}
+
     </style>
 </head>
 <body>
     <h2>Tab Activity</h2>
+    <div class="toggle-container">
+        <label class="switch">
+            <input type="checkbox" id="focusToggle">
+            <span class="slider round"></span>
+        </label>
+        <span class="toggle-label">Focus Mode</span>
+    </div>
     <button id="resetHidden" class="button">Reset Hidden Sites</button>
     <button id="downloadCsv" class="button">Download CSV</button>
     <button id="moreStats" class="button">More Stats</button>
     <ul id="tabList"></ul>
+    
     <script src="popup.js"></script>
 </body>
 </html>
