--- a/stats.html
+++ b/stats.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailed Stats</title>
+    <script src="chart.umd.js"></script> <!-- Load Chart.js Locally -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,6 +24,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             max-width: 400px;
             margin: auto;
+            margin-bottom: 20px;
         }
 
         .stat {
@@ -30,17 +32,55 @@
             margin: 10px 0;
             color: #333;
         }
+
+        .charts-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        .chart-container {
+            flex: 1;
+            min-width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        canvas {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <h2>Detailed Statistics</h2>
+    
     <div class="stats-container">
         <div class="stat"><strong>Websites Visited:</strong> <span id="totalWebsites">0</span></div>
         <div class="stat"><strong>Total Time Spent:</strong> <span id="totalTime">0s</span></div>
         <div class="stat"><strong>Avg. Attention Span Per Site:</strong> <span id="avgTimePerSite">0s</span></div>
-        <div class="stat"><strong>Avg. Time Per Day:</strong> <span id="avgTimePerDay">0s</span></div>
+        <!-- <div class="stat"><strong>Avg. Time Per Day:</strong> <span id="avgTimePerDay">0s</span></div> -->
+        <!-- <div class="stat"><strong>Time Spent Today:</strong> <span id="timeSpentToday">0s</span></div> -->
         <div class="stat"><strong>Most Visited Site:</strong> <span id="mostVisitedSite">N/A</span></div>
     </div>
+
+    <div class="charts-container">
+        <div class="chart-container">
+            <h2>Time Spent Per Website</h2>
+            <canvas id="pieChart"></canvas>
+        </div>
+
+        <div class="chart-container">
+            <h2>Time Spent Per Day</h2>
+            <canvas id="barChart"></canvas>
+        </div>
+        
+    </div>
+
     <script src="stats.js"></script>
 </body>
 </html>
